src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Hardware_Sales__c</fullName>
        <description>% Hardware Sales</description>
        <label>% Hardware Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ISV_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISV Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox  to indicate the activity of the Account</description>
        <inlineHelpText>Checkbox to indicate the activity of the Account</inlineHelpText>
        <label>Inactive Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Reps__c</fullName>
        <description># Inside Sales Reps</description>
        <label># Inside Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_ZISP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is ZISP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Account_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Account Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Account_Formula__c</fullName>
        <formula>Key_Account_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Score_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key/Score Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_AIT_Partner_Active_MPE__c</fullName>
        <formula>AND( Partner_Status__c == &apos;Active&apos; , Siebel_Row_Id__c !=&apos;&apos;, ISPICKVAL( Account_Type__c , &apos;Partner&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead - AIT Partner-Active MPE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_EMEA_Partner_Leads_in_MSI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is updated to True only for the EMEA Partner Accounts for Partner Lead Assignment</description>
        <label>Lead - EMEA Partner Account-Leads in MSI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_EVM_Lead_Enabled_Partner_MPE__c</fullName>
        <formula>AND (MSI_E_Account__c!= &apos;&apos;,    Partner_Status__c == &apos;Active&apos;, Lead_Enabled__c == TRUE,   ISPICKVAL(Account_Type__c, &apos;Partner&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead - EVM Lead Enabled Partner-MPE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PIC enables  the Lead Enabled flag in MSI for the E Partner Accounts</description>
        <label>Lead Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <formula>&apos;To be substituted with DandB values later&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPE_Program_Status_New__c</fullName>
        <description>This Picklist determines the Partner Empower Program Status</description>
        <label>xPartnerEmpower Program Status(DONT USE)</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MSI_E_Account__c</fullName>
        <description>This field determines the MSI E Account ID</description>
        <externalId>true</externalId>
        <inlineHelpText>This field determines the Sold-To- Number of End-User or Partner Account in Trilogy</inlineHelpText>
        <label>EVM Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Resources__c</fullName>
        <description># Technical Support Resources</description>
        <label># Marketing Resources</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_No_of_Partner_Admins__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Max No of Partner Admins</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mission_Vision_Statement__c</fullName>
        <label>Mission/Vision Statement</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Employees__c</fullName>
        <description>This field shows the number of employees</description>
        <label>No. of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Active_Partner_Admins__c</fullName>
        <label>Number Of Active Partner Admins</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Cases__c</fullName>
        <label>Number of Open Cases (Partner Contact)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSR_SITE_ID__c</fullName>
        <description>From Phase 4 Trilogy table hz_cust_acct_sites_all 
Column: orig_system_reference</description>
        <inlineHelpText>From Trilogy</inlineHelpText>
        <label>OSR SITE ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <description>This field details about the office of account</description>
        <label>EVM Office</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offline_Transition_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offline Transition Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offline_Transition_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offline Transition Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offline_Transition_Profile_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offline Transition Profile Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offline_Transition_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offline Transition Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Sales__c</fullName>
        <description>Online Sales %</description>
        <label>Online Sales %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <description>list opportunities of the account</description>
        <label>Opportunities</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Orderable_Flag_Formula__c</fullName>
        <formula>Orderable_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orderable Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orderable_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Orderable Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <description>This field details about the organization</description>
        <label>EVM Org</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Formula__c</fullName>
        <formula>Organization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Application__c</fullName>
        <label>Other Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>List the other competitor</description>
        <inlineHelpText>List the other competitor</inlineHelpText>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Out_of_Business_Indicator__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of Business Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outside_Sales_Reps__c</fullName>
        <description># Outside Sales Reps</description>
        <label># Outside Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Theater__c</fullName>
        <description>This field gives details about the Owner Theatre of account</description>
        <formula>text(Owner.Theater__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Theater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Program_Name__c</fullName>
        <label>PF Program Name</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>AIDC Technology Specialist Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIDC Technology Specialist Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIDC Technology Specialist Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadline Technology Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Reseller - Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Reseller - Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Reseller - Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Reseller - Premier Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAX Authorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print - Apply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Solutions Architect Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Solutions Architect Premier</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PartnerEmpower_Program_Status__c</fullName>
        <description>This Picklist determines the Partner Empower Program Status</description>
        <label>PartnerEmpower Program Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Activation_Date__c</fullName>
        <label>Partner Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Application__c</fullName>
        <label>Partner Application</label>
        <referenceTo>Partner_Application__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Deactivation_Date__c</fullName>
        <label>Partner Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_First_ID__c</fullName>
        <label>Partner First ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Locator_Company_Description__c</fullName>
        <label>Partner Locator Company Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Locator_Permisson_Granted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Locator Permisson Granted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Program_ID_Number__c</fullName>
        <formula>IF( ( ISBLANK( AccountNumber ) || ISNULL( AccountNumber ) ) , Account_Number__c , AccountNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Program ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Program_Membership__c</fullName>
        <label>Partner Program Membership</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Program_Product_Specialization__c</fullName>
        <label>Partner Program Product Specialization</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Region__c</fullName>
        <description>This is a pick list to select Partner Region</description>
        <label>Partner Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WORLDWIDE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Status__c</fullName>
        <formula>if(of_Active_PMI__c &gt; 0, &apos;Active&apos;, &apos;Inactive&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is for PartnerConnect</inlineHelpText>
        <label>Partner Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Zone__c</fullName>
        <label>Partner Zone</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater China Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater India Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PartnersFirst_Type__c</fullName>
        <label>PF Program Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Specialist</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Price_Group__c</fullName>
        <description>This is a pick list to select price group</description>
        <label>Price Group</label>
        <picklist>
            <picklistValues>
                <fullName>E1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <label>Price List</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Row_Id__c</fullName>
        <label>Primary Address Row Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Company_Email__c</fullName>
        <label>Primary Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Country__c</fullName>
        <label>Primary Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amer.Virgin Is.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_County__c</fullName>
        <label>Primary County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Shipping_Address_Row_Id__c</fullName>
        <label>Primary Shipping Address Row Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Services_Resources__c</fullName>
        <description># Professional Services Resources</description>
        <label># Professional Services Resources</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Membership_Information__c</fullName>
        <label>Program Membership Information</label>
        <picklist>
            <picklistValues>
                <fullName>Registered Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadline Technology Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner,Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Partner,Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV,Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV Partner,Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Printers Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Printers Specialist,Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies Specialist,Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID Specialist,Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Networks Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Networks Specialist,Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Engines Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Engines Specialist,Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor,Authorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Distributor,Authorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integrator</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Prospect_Number__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>Prospect Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <picklist>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manitoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Brunswick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newfoundland and Labrador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest Territories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nova Scotia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nunavut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ontario</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Edward Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quebec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saskatchewan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yukon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommended_Programs_for_Transition__c</fullName>
        <label>Recommended Programs for Transition</label>
        <picklist>
            <picklistValues>
                <fullName>Registered Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadline Technology Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner,Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Partner,Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV,Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV Partner,Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Printers Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Printers Specialist,Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies Specialist,Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID Specialist,Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Networks Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Networks Specialist,Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Engines Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Engines Specialist,Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor,Authorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Distributor,Authorized</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Registered_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to determine if the Non-Classified Reseller Account has Program Details or not.</description>
        <label>Registered Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reseller_Health__c</fullName>
        <description>Sales Team member assessment of overall reseller health</description>
        <inlineHelpText>Sales Team member assessment of overall reseller health</inlineHelpText>
        <label>Reseller Health</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDCSiebel_Sync_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFDCSiebel Sync Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Siebel_Sync_Status_Formula__c</fullName>
        <formula>SFDCSiebel_Sync_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Siebel Sync Status</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>